# kitsune

./: Cargo.toml  docker-compose.yml  environment.d.ts  lib.node.d.ts  package.json  types.d.ts
lib/: lib.rs
lib/services/: file_upload.rs  mod.rs
src/: index.ts
src/controllers/: auth.controller.ts  color.controller.ts  device.controller.ts  google-home.controller.ts  user.controller.ts
src/database/: connection.ts  sequelize.config.js
src/database/firebase/: connection.ts
src/database/migrations/: 20240919173148-create-user.ts  20240919202854-create-device.ts  20241009151058-update-devices-add-column-group.ts
src/database/models/: device.ts  index.ts  user.ts
src/database/seeders/: 20240919212543-first-user.ts  20241009151406-add-initial-devices.ts
src/interfaces/: google-intents.ts
src/middlewares/: auth.middleware.ts
src/routes/: auth.route.ts  color.route.ts  device.route.ts  google-home.route.ts  index.ts  user.route.ts
src/services/: chroma.service.ts  color.service.ts  device.service.ts  google-home.service.ts  intent-executor.service.ts  user.service.ts
