[package]
name = "nekomata-api"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node", "lib.node"]

[lib]
path = "lib/lib.rs"  # Custom path to your lib entry point
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
futures = "0.3" 
